lang/examples/good/09-01-global-variable.wdr
var test: String = "test";

fun main(): Void {
  printString(test);

  return;
}
