lang/examples/bad/09-01-variable-scope.wdr
fun main(): Void {
  {
    var a: String = "test";

    return;
  }

  printString(a);

  return;
}